src/objects/Industry__c.object
<CustomObject><fields>
        <fullName>Associted_Case_Subject__c</fullName>
        <description>To display case subject manner when looking up on industrial hierarchy</description>
        <formula>HYPERLINK("/"&amp;  Case_Industrial_Hierarchy__r.Id  ,Case_Industrial_Hierarchy__r.Subject,"_self")</formula>
        <label>Associated Case Subject</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Case_Industrial_Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Do not edit these fields</inlineHelpText>
        <label>Case Industrial Hierarchy</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Case_Industry_Hierarchy</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Case_Subject__c</fullName>
        <formula>HYPERLINK( "/" &amp; Case_Industrial_Hierarchy__c , Case_Industrial_Hierarchy__r.Subject,"_self")</formula>
        <label>Case Subject</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Industry_One__c</fullName>
        <formula>1</formula>
        <label>Industry One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Industry_Text__c</fullName>
        <label>Industry Text</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Industry__c</fullName>
        <inlineHelpText>You must select an Industry before you can save the record.</inlineHelpText>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Aerospace and Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agribusiness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business and Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution and Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment and Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food and Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franchising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information and Communications Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marine Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media and Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profits and Associations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Sector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety &amp; Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Textiles and Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel and Tourism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale Trade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Industry_Hierarchies</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Do not edit these fields</inlineHelpText>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>OrgIndustryHierarchy</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant</label>
        <referenceTo>Participation__c</referenceTo>
        <relationshipLabel>Industries</relationshipLabel>
        <relationshipName>Industries</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Sector_Text__c</fullName>
        <label>Sector Text</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <picklist>
            <controllingField>Industry__c</controllingField>
            <picklistValues>
                <fullName>Access Control Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accommodations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Education and Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agricultural Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agricultural Equipment and Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Pollution Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artwork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio-Visual Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automobiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive Aftermarket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive Repair Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bakeries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beverages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Products and Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Associations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalog and Mail Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceramics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chambers of Commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Production Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil Nuclear Power</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Sub_Sector_Text__c</fullName>
        <label>Sub-Sector Text</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Sub_Sector__c</fullName>
        <label>Sub-Sector</label>
        <picklist>
            <controllingField>Sector__c</controllingField>
            <picklistValues>
                <fullName>Aircraft and Aircraft Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airport and Ground Support Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Traffic Control Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asphalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aviation Security Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avionics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bicycles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biodiesel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biomass Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biopharmaceuticals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Books and Periodicals Publishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bus Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Rentals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cement and Concrete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clean Coal Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coal Gasification Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Fishing Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Vessel Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commission Agents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Peripherals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Brokerage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cutting Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental Equipment and Supplies</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>WIN_Industrial_Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Do not edit these fields</inlineHelpText>
        <label>WIN Industrial Hierarchy</label>
        <referenceTo>WIN__c</referenceTo>
        <relationshipName>WINIndustrialHierarchy</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>WIN_Name__c</fullName>
        <formula>HYPERLINK( "/" &amp; WIN_Industrial_Hierarchy__c, WIN_Industrial_Hierarchy__r.Name,"_self")</formula>
        <label>WIN Name</label>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>Industry</label><nameField>
        <displayFormat>IH-{0000}</displayFormat>
        <label>Industry ID</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Industries</pluralLabel><sharingModel>ReadWrite</sharingModel><startsWith>Vowel</startsWith><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Industry__c</columns>
        <columns>Organization__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><validationRules>
        <fullName>Industry_must_be_selected</fullName>
        <active>true</active>
        <description>Must select at least an entry on Industry picklist.</description>
        <errorConditionFormula>ISPICKVAL(Industry__c,"" )</errorConditionFormula>
        <errorDisplayField>Industry__c</errorDisplayField>
        <errorMessage>You must select an Industry.</errorMessage>
    </validationRules><validationRules>
        <fullName>Lookup_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>( IF(ISBLANK( Organization__c ),0,1) + 
  IF(ISBLANK( WIN_Industrial_Hierarchy__c ),0,1) + 
  IF(ISBLANK( Case_Industrial_Hierarchy__c ),0,1)
) &gt; 1</errorConditionFormula>
        <errorMessage>Can only update one of the following fields:  Organization, Case Industrial Hierarchy, or WIN Industrial Hierarchy.</errorMessage>
    </validationRules></CustomObject>